--- a/popup.html
+++ b/popup.html
@@ -8,16 +8,18 @@
 
 	<body>
 
-		<h1>mTimer, a Speed Cube Timer</h1>
+		<h1>mTimer</h1>
 		<h3 id = "scramble"></h3>
 		<div class = "timer">
-			<p id = "time">0</p>
+		<p id = "time">0</p>
 		</div>
 		<h2>Press the space bar to start the timer or to end the timer!</h2>
 
-		<button id = "execute">Full Version</button>
+		<form>
+			<input type="button" id = "execute" class = "fullVersionButton" value = "Full Version"/>		
+		</form>
 
-
+ 
 	<script src="functions.js"></script>
 	</body>
 
