--- a/main.html
+++ b/main.html
@@ -3,29 +3,28 @@
 	<head>
 		<title>mTimer</title>
 	   <link rel = "stylesheet" type = "text/css" href = "style.css"/>
-	   <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+	   <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 	</head>
 
 	<body>
+		<center>
+			<br>
+			
+			<h3 id = "scramble"></h3>
+			<div class = "timer">
+				<p id = "time">0</p>
+			</div>
 
-		<h1>mTimer</h1>
-		<h3 id = "scramble"></h3>
-		<div class = "timer">
-			<p id = "time">0</p>
-		</div>
+			<h2 id = "avg3" class = "stats"> Avg 3: </h2>
+			<h2 id = "avg5" class = "stats"> Avg 5: </h2>
+			<h2 id = "avg10" class = "stats"> Avg 10: </h2>
 
-		<h2 id = "avg3" class = "stats"> Avg 3: </h2>
-		<h2 id = "avg5" class = stats> Avg 5: </h2>
-		<h2 id = "avg10" class = "stats"> Avg 10: </h2>
-		<h2>Press the space bar to start the timer or to end the timer!</h2>
+			<h2>Press the space bar to start the timer or to end the timer!</h2>
 
-		<ul id = "listOfTimes"></ul>
+			<ul id = "listOfTimes"></ul>
 
-		<h3>Updates to come: List of previous times, more stats, and images of how the scrambled cube should look like</h3>
-
-
-
-	<script src="functions.js"></script>
+		</center>
+			<script src="functions.js"></script>
 	</body>
 
 
