--- a/popup.html
+++ b/popup.html
@@ -7,18 +7,18 @@
 	</head>
 
 	<body>
+		<br>
+		<center>
+			<h3 id = "scramble"></h3>
+			<div class = "timer">
+			<p id = "time">0</p>
+			</div>
+			<h2>Press the space bar to start the timer or to end the timer!</h2>
 
-		<h1>mTimer</h1>
-		<h3 id = "scramble"></h3>
-		<div class = "timer">
-		<p id = "time">0</p>
-		</div>
-		<h2>Press the space bar to start the timer or to end the timer!</h2>
-
-		<form>
-			<input type="button" id = "execute" class = "fullVersionButton" value = "Full Version"/>		
-		</form>
-
+			<form action="main.html"> 
+				<input type="submit" value="Full Version" />
+			</form>
+		</center>
  
 	<script src="functions.js"></script>
 	</body>
