--- a/mtimer-index.html
+++ b/mtimer-index.html
@@ -7,24 +7,29 @@
 	</head>
 
 	<body>
-		<center>
-			<br>
-			
-			<h3 id = "scramble"></h3>
-			<div class = "timer">
-				<p id = "time">0</p>
-			</div>
+		
+			<a onclick="modifyTimer();">
+			<center>
+				
+				<h3 id = "scramble"></h3>
+				<div class = "timer">
+					<p id = "time">0</p>
+				</div>
 
-			<h2 id = "avg3" class = "stats"> Avg 3: </h2>
-			<h2 id = "avg5" class = "stats"> Avg 5: </h2>
-			<h2 id = "avg10" class = "stats"> Avg 10: </h2>
+				<h2 id = "avg3" class = "stats"> Avg 3: </h2>
+				<h2 id = "avg5" class = "stats"> Avg 5: </h2>
+				<h2 id = "avg10" class = "stats"> Avg 10: </h2>
 
-			<h2>Press the space bar to start the timer or to end the timer!</h2>
+				<h2>Start or end timer by pressing space or left click</h2>
 
-			<ul id = "listOfTimes"></ul>
+				<ul id = "listOfTimes"></ul>
 
-		</center>
-			<script src="functions.js"></script>
+			</center>
+
+				<script src="functions.js"></script>
+					</a>
+				
+		
 	</body>
 
 
