--- a/mtimer-index.html
+++ b/mtimer-index.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<title>mTimer</title>
-	   <link rel = "stylesheet" type = "text/css" href = "style.css"/>
+	   <link rel = "stylesheet" type = "text/css" href = "mtimer-style.css"/>
 	   <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 	</head>
 
@@ -11,14 +11,14 @@
 			<a onclick="modifyTimer();">
 			<center>
 				
-				<h3 id = "scramble"></h3>
+				<h1 id = "scramble"></h1>
 				<div class = "timer">
 					<p id = "time">0</p>
 				</div>
 
-				<h2 id = "avg3" class = "stats"> Avg 3: </h2>
-				<h2 id = "avg5" class = "stats"> Avg 5: </h2>
-				<h2 id = "avg10" class = "stats"> Avg 10: </h2>
+				<h2 id = "avg3" class = "stats"> Avg of 3: </h2>
+				<h2 id = "avg5" class = "stats"> Avg of 5: </h2>
+				<h2 id = "avg10" class = "stats"> Avg of 10: </h2>
 
 				<h2>Start or end timer by pressing space or left click</h2>
 
